--- a/eTools Ultimate/Resources/Texts.resx
+++ b/eTools Ultimate/Resources/Texts.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SelectClientFolder" xml:space="preserve">
+    <value>Select the client folder</value>
+  </data>
   <data name="SelectIconsFolder" xml:space="preserve">
     <value>Select the icons folder</value>
   </data>
