--- a/eTools Ultimate/Resources/PatchNotes.resx
+++ b/eTools Ultimate/Resources/PatchNotes.resx
@@ -1,64 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
 
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -135,4 +77,10 @@
   <data name="Version_1_2_5" xml:space="preserve">
     <value>{"version":"Version 1.2.5","date":"2024-07-02","modifications":[{"text":"Converted table layout to a compact grid layout in the 'Collect' tab","type":1},{"text":"Implemented SortableGridItem component for drag-and-drop functionality in grid format","type":0},{"text":"Optimized item display with two-column layout for better space efficiency","type":4},{"text":"Redesigned probability fields to display inline with element names","type":1},{"text":"Fixed data loading issues by passing availableItems directly through the component hierarchy","type":3},{"text":"Improved layout of collection items for better visualization and reduced scrolling","type":4},{"text":"Removed faulty references to NPCTab that caused linter errors","type":3},{"text":"Optimized formatting with uniform width constraints for probability inputs","type":4}]}</value>
   </data>
+              <data name="Version_1_3_1" xml:space="preserve">
+              <value>{"version":"Version 1.3.1","date":"2026-08-19","developerText":"This update focuses on UI consistency and bug fixes. We've streamlined the interface by removing unnecessary filter buttons and ensuring all pages follow the same design patterns. The header improvements make it much easier to identify items at a glance.","imagePath":"/Assets/Icons/AboutIcon.png","categories":{"added":[],"changed":[{"text":"Removed Filter buttons from AccessoryPage, HonorPage, TerrainObjectPage, and WorldPage","type":1},{"text":"Corrected AccessoryPage header to show user-friendly names instead of technical identifiers","type":1},{"text":"Standardized button layout and spacing across all editor pages","type":1}],"fixed":[{"text":"Fixed ObjectPage scale field Grid structure bug","type":3},{"text":"Fixed button color inconsistencies across all pages","type":3},{"text":"Fixed Grid.Row attribute issues in form layouts","type":3}],"improved":[{"text":"Improved header structure with proper visual hierarchy","type":4},{"text":"Enhanced user experience with cleaner interface design","type":4},{"text":"Improved consistency between ItemPage and other editor pages","type":4}]}}</value>
+            </data>
+            <data name="Version_1_3_0" xml:space="preserve">
+              <value>{"version":"Version 1.3.0","date":"2026-08-19","developerText":"This major update represents a complete overhaul of the eTools Ultimate interface. We've modernized the entire application with the WPF UI library, bringing a consistent and professional look across all editor pages. The new design improves usability while maintaining all existing functionality.","imagePath":"/Assets/Icons/PersonalizationIcon.png","categories":{"added":[{"text":"Complete UI redesign with modern WPF UI library integration","type":0},{"text":"Added comprehensive icon management system with proper resource inclusion","type":0},{"text":"Enhanced HonorPage with modern form layout and proper data binding","type":0},{"text":"Implemented proper MVVM pattern with ObservableObject and RelayCommand","type":0},{"text":"Improved project structure with proper resource management","type":0}],"changed":[{"text":"Standardized dark/light theme support across all pages","type":1},{"text":"Unified ListView design across all pages (ItemPage, AccessoryPage, MotionPage, HonorPage)","type":1},{"text":"Implemented consistent two-column layout with ListView and detail forms","type":1},{"text":"Standardized action buttons (Undo, Redo, Save, Expert, Filter, Add, Delete) across all pages","type":1},{"text":"Updated TerrainObjectPage and WorldPage with standardized button colors","type":1},{"text":"Standardized color scheme: Blue (#2F70AF) for Add buttons, Red (#FD292F) for Delete buttons","type":1}],"fixed":[{"text":"Fixed XAML resource resolution errors and property element placement issues","type":3},{"text":"Fixed namespace issues for ViewModels and resolved binding errors","type":3},{"text":"Added missing event handlers for UI interactions","type":3},{"text":"Resolved WPF UI library resource conflicts and theme switching issues","type":3},{"text":"Fixed ObjectPage button layout and removed unnecessary scale controls","type":3}],"improved":[{"text":"Improved MotionPage with consistent preview window design","type":4},{"text":"Enhanced navigation menu with high-quality icons and proper routing","type":4},{"text":"Enhanced user experience with consistent design language across all editor pages","type":4}]}}</value>
+            </data>
 </root>
