--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -117,4 +117,306 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  
+  <!-- Dashboard Page Translations -->
+  <data name="Welcome" xml:space="preserve">
+    <value>Willkommen</value>
+    <comment>Welcome text on dashboard</comment>
+  </data>
+  <data name="CreatedBy" xml:space="preserve">
+    <value>Erstellt von eTools Ultimate</value>
+    <comment>Created by text on dashboard</comment>
+  </data>
+  <data name="Patchlogs" xml:space="preserve">
+    <value>Patchlogs</value>
+    <comment>Patchlogs button text</comment>
+  </data>
+  <data name="ViewOnGitHub" xml:space="preserve">
+    <value>Auf GitHub anzeigen</value>
+    <comment>GitHub button tooltip</comment>
+  </data>
+  <data name="JoinDiscordServer" xml:space="preserve">
+    <value>Unserem Discord-Server beitreten</value>
+    <comment>Discord button tooltip</comment>
+  </data>
+  
+  <!-- Navigation Cards -->
+  <data name="Items" xml:space="preserve">
+    <value>Gegenstände</value>
+    <comment>Items navigation card title</comment>
+  </data>
+  <data name="ItemsDescription" xml:space="preserve">
+    <value>Navigiere zur Gegenstände-Seite.</value>
+    <comment>Items navigation card description</comment>
+  </data>
+  
+  <data name="Movers" xml:space="preserve">
+    <value>Beweger</value>
+    <comment>Movers navigation card title</comment>
+  </data>
+  <data name="MoversDescription" xml:space="preserve">
+    <value>Navigiere zur Beweger-Seite.</value>
+    <comment>Movers navigation card description</comment>
+  </data>
+  
+  <data name="Skills" xml:space="preserve">
+    <value>Fähigkeiten</value>
+    <comment>Skills navigation card title</comment>
+  </data>
+  <data name="SkillsDescription" xml:space="preserve">
+    <value>Navigiere zur Fähigkeiten-Seite.</value>
+    <comment>Skills navigation card description</comment>
+  </data>
+  
+  <data name="Quests" xml:space="preserve">
+    <value>Aufgaben</value>
+    <comment>Quests navigation card title</comment>
+  </data>
+  <data name="QuestsDescription" xml:space="preserve">
+    <value>Navigiere zur Aufgaben-Seite.</value>
+    <comment>Quests navigation card description</comment>
+  </data>
+  
+  <data name="NPCs" xml:space="preserve">
+    <value>NSCs</value>
+    <comment>NPCs navigation card title</comment>
+  </data>
+  <data name="NPCsDescription" xml:space="preserve">
+    <value>Navigiere zur NSC-Seite.</value>
+    <comment>NPCs navigation card description</comment>
+  </data>
+  
+  <data name="Events" xml:space="preserve">
+    <value>Ereignisse</value>
+    <comment>Events navigation card title</comment>
+  </data>
+  <data name="EventsDescription" xml:space="preserve">
+    <value>Navigiere zur Ereignisse-Seite.</value>
+    <comment>Events navigation card description</comment>
+  </data>
+  
+  <data name="Giftboxes" xml:space="preserve">
+    <value>Geschenkkisten</value>
+    <comment>Giftboxes navigation card title</comment>
+  </data>
+  <data name="GiftboxesDescription" xml:space="preserve">
+    <value>Navigiere zur Geschenkkisten-Seite.</value>
+    <comment>Giftboxes navigation card description</comment>
+  </data>
+  
+  <data name="Collectors" xml:space="preserve">
+    <value>Sammler</value>
+    <comment>Collectors navigation card title</comment>
+  </data>
+  <data name="CollectorsDescription" xml:space="preserve">
+    <value>Navigiere zur Sammler-Seite.</value>
+    <comment>Collectors navigation card description</comment>
+  </data>
+  
+  <data name="Accessories" xml:space="preserve">
+    <value>Zubehör</value>
+    <comment>Accessories navigation card title</comment>
+  </data>
+  <data name="AccessoriesDescription" xml:space="preserve">
+    <value>Navigiere zum Zubehör.</value>
+    <comment>Accessories navigation card description</comment>
+  </data>
+  
+  <data name="Exchangers" xml:space="preserve">
+    <value>Tauscher</value>
+    <comment>Exchangers navigation card title</comment>
+  </data>
+  <data name="ExchangersDescription" xml:space="preserve">
+    <value>Navigiere zur Tauscher-Seite.</value>
+    <comment>Exchangers navigation card description</comment>
+  </data>
+  
+  <data name="HonorList" xml:space="preserve">
+    <value>Ehrenliste</value>
+    <comment>Honor List navigation card title</comment>
+  </data>
+  <data name="HonorListDescription" xml:space="preserve">
+    <value>Navigiere zur Ehrenliste.</value>
+    <comment>Honor List navigation card description</comment>
+  </data>
+  
+  <data name="Couple" xml:space="preserve">
+    <value>Paar</value>
+    <comment>Couple navigation card title</comment>
+  </data>
+  <data name="CoupleDescription" xml:space="preserve">
+    <value>Navigiere zur Paar-Seite.</value>
+    <comment>Couple navigation card description</comment>
+  </data>
+  
+  <data name="Motions" xml:space="preserve">
+    <value>Bewegungen</value>
+    <comment>Motions navigation card title</comment>
+  </data>
+  <data name="MotionsDescription" xml:space="preserve">
+    <value>Navigiere zur Bewegungen-Seite.</value>
+    <comment>Motions navigation card description</comment>
+  </data>
+  
+  <data name="TextClient" xml:space="preserve">
+    <value>Text Client</value>
+    <comment>Text Client navigation card title</comment>
+  </data>
+  <data name="TextClientDescription" xml:space="preserve">
+    <value>Navigiere zum Text Client.</value>
+    <comment>Text Client navigation card description</comment>
+  </data>
+  
+  <data name="World" xml:space="preserve">
+    <value>Welt</value>
+    <comment>World navigation card title</comment>
+  </data>
+  <data name="WorldDescription" xml:space="preserve">
+    <value>Welt Editor öffnen.</value>
+    <comment>World navigation card description</comment>
+  </data>
+  
+  <data name="Tickets" xml:space="preserve">
+    <value>Tickets</value>
+    <comment>Tickets navigation card title</comment>
+  </data>
+  <data name="TicketsDescription" xml:space="preserve">
+    <value>Ticket Editor öffnen.</value>
+    <comment>Tickets navigation card description</comment>
+  </data>
+  
+  <data name="Object" xml:space="preserve">
+    <value>Objekt</value>
+    <comment>Object navigation card title</comment>
+  </data>
+  <data name="ObjectDescription" xml:space="preserve">
+    <value>Objekt Editor öffnen.</value>
+    <comment>Object navigation card description</comment>
+  </data>
+  
+  <data name="Terrain" xml:space="preserve">
+    <value>Terrain</value>
+    <comment>Terrain navigation card title</comment>
+  </data>
+  <data name="TerrainDescription" xml:space="preserve">
+    <value>Terrain Editor öffnen.</value>
+    <comment>Terrain navigation card description</comment>
+  </data>
+  
+  <data name="Job" xml:space="preserve">
+    <value>Beruf</value>
+    <comment>Job navigation card title</comment>
+  </data>
+  <data name="JobDescription" xml:space="preserve">
+    <value>Beruf Editor öffnen.</value>
+    <comment>Job navigation card description</comment>
+  </data>
+  
+  <data name="Packitem" xml:space="preserve">
+    <value>Packgegenstand</value>
+    <comment>Packitem navigation card title</comment>
+  </data>
+  <data name="PackitemDescription" xml:space="preserve">
+    <value>Packgegenstand Editor öffnen.</value>
+    <comment>Packitem navigation card description</comment>
+  </data>
+  
+  <data name="Lord" xml:space="preserve">
+    <value>Lord</value>
+    <comment>Lord navigation card title</comment>
+  </data>
+  <data name="LordDescription" xml:space="preserve">
+    <value>Lord Editor öffnen.</value>
+    <comment>Lord navigation card description</comment>
+  </data>
+  
+  <data name="DropEvent" xml:space="preserve">
+    <value>Drop Event</value>
+    <comment>Drop Event navigation card title</comment>
+  </data>
+  <data name="DropEventDescription" xml:space="preserve">
+    <value>Drop Event Editor öffnen.</value>
+    <comment>Drop Event navigation card description</comment>
+  </data>
+  
+  <data name="Settings" xml:space="preserve">
+    <value>Einstellungen</value>
+    <comment>Settings navigation card title</comment>
+  </data>
+  <data name="SettingsDescription" xml:space="preserve">
+    <value>Navigiere zur Einstellungen-Seite.</value>
+    <comment>Settings navigation card description</comment>
+  </data>
+  
+  <!-- Menu Items -->
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+    <comment>Dashboard menu item</comment>
+  </data>
+  <data name="ChangeLog" xml:space="preserve">
+    <value>Änderungsprotokoll</value>
+    <comment>Change Log menu item</comment>
+  </data>
+  
+  <!-- Giftbox Page Translations -->
+  <data name="Search" xml:space="preserve">
+    <value>Suche...</value>
+    <comment>Search placeholder text</comment>
+  </data>
+  <data name="ItemsIn" xml:space="preserve">
+    <value>Gegenstände in:</value>
+    <comment>Items in text</comment>
+  </data>
+  <data name="Undo" xml:space="preserve">
+    <value>Rückgängig</value>
+    <comment>Undo button tooltip</comment>
+  </data>
+  <data name="Redo" xml:space="preserve">
+    <value>Wiederholen</value>
+    <comment>Redo button tooltip</comment>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Speichern</value>
+    <comment>Save button text</comment>
+  </data>
+  <data name="Expert" xml:space="preserve">
+    <value>Experte</value>
+    <comment>Expert button text</comment>
+  </data>
+  <data name="AddItem" xml:space="preserve">
+    <value>Gegenstand hinzufügen</value>
+    <comment>Add Item button text</comment>
+  </data>
+  <data name="ItemsInBox" xml:space="preserve">
+    <value>Gegenstände in Box:</value>
+    <comment>Items in box text</comment>
+  </data>
+  <data name="TotalProbability" xml:space="preserve">
+    <value>Gesamtwahrscheinlichkeit:</value>
+    <comment>Total probability text</comment>
+  </data>
+  <data name="Item" xml:space="preserve">
+    <value>Gegenstand</value>
+    <comment>Item column header</comment>
+  </data>
+  <data name="Quantity" xml:space="preserve">
+    <value>Menge</value>
+    <comment>Quantity column header</comment>
+  </data>
+  <data name="Percentage" xml:space="preserve">
+    <value>%</value>
+    <comment>Percentage column header</comment>
+  </data>
+  <data name="Actions" xml:space="preserve">
+    <value>Aktionen</value>
+    <comment>Actions column header</comment>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Bearbeiten</value>
+    <comment>Edit button tooltip</comment>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Löschen</value>
+    <comment>Delete button tooltip</comment>
+  </data>
 </root>
