--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -120,123 +120,123 @@
   
   <!-- Dashboard Page Translations -->
   <data name="Welcome" xml:space="preserve">
-    <value>Bienvenue</value>
+    <value>Welcome</value>
     <comment>Welcome text on dashboard</comment>
   </data>
   <data name="CreatedBy" xml:space="preserve">
-    <value>Créé par eTools Ultimate</value>
+    <value>Created by eTools Ultimate</value>
     <comment>Created by text on dashboard</comment>
   </data>
   <data name="Patchlogs" xml:space="preserve">
-    <value>Notes de patch</value>
+    <value>Patchlogs</value>
     <comment>Patchlogs button text</comment>
   </data>
   <data name="ViewOnGitHub" xml:space="preserve">
-    <value>Voir sur GitHub</value>
+    <value>View on GitHub</value>
     <comment>GitHub button tooltip</comment>
   </data>
   <data name="JoinDiscordServer" xml:space="preserve">
-    <value>Rejoindre notre serveur Discord</value>
+    <value>Join our Discord server</value>
     <comment>Discord button tooltip</comment>
   </data>
   
   <!-- Navigation Cards -->
   <data name="Items" xml:space="preserve">
-    <value>Objets</value>
+    <value>Items</value>
     <comment>Items navigation card title</comment>
   </data>
   <data name="ItemsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des objets.</value>
+    <value>Navigate to the items page.</value>
     <comment>Items navigation card description</comment>
   </data>
   
   <data name="Movers" xml:space="preserve">
-    <value>Mobiles</value>
+    <value>Movers</value>
     <comment>Movers navigation card title</comment>
   </data>
   <data name="MoversDescription" xml:space="preserve">
-    <value>Naviguer vers la page des mobiles.</value>
+    <value>Navigate to the movers page.</value>
     <comment>Movers navigation card description</comment>
   </data>
   
   <data name="Skills" xml:space="preserve">
-    <value>Compétences</value>
+    <value>Skills</value>
     <comment>Skills navigation card title</comment>
   </data>
   <data name="SkillsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des compétences.</value>
+    <value>Navigate to the skills page.</value>
     <comment>Skills navigation card description</comment>
   </data>
   
   <data name="Quests" xml:space="preserve">
-    <value>Quêtes</value>
+    <value>Quests</value>
     <comment>Quests navigation card title</comment>
   </data>
   <data name="QuestsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des quêtes.</value>
+    <value>Navigate to the quests page.</value>
     <comment>Quests navigation card description</comment>
   </data>
   
   <data name="NPCs" xml:space="preserve">
-    <value>PNJ</value>
+    <value>NPCs</value>
     <comment>NPCs navigation card title</comment>
   </data>
   <data name="NPCsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des PNJ.</value>
+    <value>Navigate to the NPCs page.</value>
     <comment>NPCs navigation card description</comment>
   </data>
   
   <data name="Events" xml:space="preserve">
-    <value>Événements</value>
+    <value>Events</value>
     <comment>Events navigation card title</comment>
   </data>
   <data name="EventsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des événements.</value>
+    <value>Navigate to the events page.</value>
     <comment>Events navigation card description</comment>
   </data>
   
   <data name="Giftboxes" xml:space="preserve">
-    <value>Boîtes-cadeaux</value>
+    <value>Giftboxes</value>
     <comment>Giftboxes navigation card title</comment>
   </data>
   <data name="GiftboxesDescription" xml:space="preserve">
-    <value>Naviguer vers la page des boîtes-cadeaux.</value>
+    <value>Navigate to the giftboxes page.</value>
     <comment>Giftboxes navigation card description</comment>
   </data>
   
   <data name="Collectors" xml:space="preserve">
-    <value>Collectionneurs</value>
+    <value>Collectors</value>
     <comment>Collectors navigation card title</comment>
   </data>
   <data name="CollectorsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des collectionneurs.</value>
+    <value>Navigate to the collectors page.</value>
     <comment>Collectors navigation card description</comment>
   </data>
   
   <data name="Accessories" xml:space="preserve">
-    <value>Accessoires</value>
+    <value>Accessories</value>
     <comment>Accessories navigation card title</comment>
   </data>
   <data name="AccessoriesDescription" xml:space="preserve">
-    <value>Naviguer vers la page des accessoires.</value>
+    <value>Navigate to the accessories page.</value>
     <comment>Accessories navigation card description</comment>
   </data>
   
   <data name="Exchangers" xml:space="preserve">
-    <value>Échangeurs</value>
+    <value>Exchangers</value>
     <comment>Exchangers navigation card title</comment>
   </data>
   <data name="ExchangersDescription" xml:space="preserve">
-    <value>Naviguer vers la page des échangeurs.</value>
+    <value>Navigate to the exchanger page.</value>
     <comment>Exchangers navigation card description</comment>
   </data>
   
   <data name="HonorList" xml:space="preserve">
-    <value>Liste d'honneur</value>
+    <value>Honor List</value>
     <comment>Honor List navigation card title</comment>
   </data>
   <data name="HonorListDescription" xml:space="preserve">
-    <value>Naviguer vers la page de la liste d'honneur.</value>
+    <value>Navigate to the honor list page.</value>
     <comment>Honor List navigation card description</comment>
   </data>
   
@@ -245,34 +245,34 @@
     <comment>Couple navigation card title</comment>
   </data>
   <data name="CoupleDescription" xml:space="preserve">
-    <value>Naviguer vers la page des couples.</value>
+    <value>Navigate to the couple page.</value>
     <comment>Couple navigation card description</comment>
   </data>
   
   <data name="Motions" xml:space="preserve">
-    <value>Mouvements</value>
+    <value>Motions</value>
     <comment>Motions navigation card title</comment>
   </data>
   <data name="MotionsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des mouvements.</value>
+    <value>Navigate to the motions page.</value>
     <comment>Motions navigation card description</comment>
   </data>
   
   <data name="TextClient" xml:space="preserve">
-    <value>Client texte</value>
+    <value>Text Client</value>
     <comment>Text Client navigation card title</comment>
   </data>
   <data name="TextClientDescription" xml:space="preserve">
-    <value>Naviguer vers le client texte.</value>
+    <value>Navigate to the text client.</value>
     <comment>Text Client navigation card description</comment>
   </data>
   
   <data name="World" xml:space="preserve">
-    <value>Monde</value>
+    <value>World</value>
     <comment>World navigation card title</comment>
   </data>
   <data name="WorldDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de monde.</value>
+    <value>Navigate to the world editor.</value>
     <comment>World navigation card description</comment>
   </data>
   
@@ -281,16 +281,16 @@
     <comment>Tickets navigation card title</comment>
   </data>
   <data name="TicketsDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de tickets.</value>
+    <value>Navigate to the ticket editor.</value>
     <comment>Tickets navigation card description</comment>
   </data>
   
   <data name="Object" xml:space="preserve">
-    <value>Objet</value>
+    <value>Object</value>
     <comment>Object navigation card title</comment>
   </data>
   <data name="ObjectDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur d'objets.</value>
+    <value>Navigate to the object editor.</value>
     <comment>Object navigation card description</comment>
   </data>
   
@@ -299,84 +299,84 @@
     <comment>Terrain navigation card title</comment>
   </data>
   <data name="TerrainDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de terrain.</value>
+    <value>Navigate to the terrain editor.</value>
     <comment>Terrain navigation card description</comment>
   </data>
   
   <data name="Job" xml:space="preserve">
-    <value>Métier</value>
+    <value>Job</value>
     <comment>Job navigation card title</comment>
   </data>
   <data name="JobDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de métiers.</value>
+    <value>Navigate to the job editor.</value>
     <comment>Job navigation card description</comment>
   </data>
   
   <data name="Packitem" xml:space="preserve">
-    <value>Objet de pack</value>
+    <value>Packitem</value>
     <comment>Packitem navigation card title</comment>
   </data>
   <data name="PackitemDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur d'objets de pack.</value>
+    <value>Navigate to the packitem editor.</value>
     <comment>Packitem navigation card description</comment>
   </data>
   
   <data name="Lord" xml:space="preserve">
-    <value>Seigneur</value>
+    <value>Lord</value>
     <comment>Lord navigation card title</comment>
   </data>
   <data name="LordDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de seigneurs.</value>
+    <value>Navigate to the lord editor.</value>
     <comment>Lord navigation card description</comment>
   </data>
   
   <data name="DropEvent" xml:space="preserve">
-    <value>Événement de drop</value>
+    <value>Drop Event</value>
     <comment>Drop Event navigation card title</comment>
   </data>
   <data name="DropEventDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur d'événements de drop.</value>
+    <value>Navigate to the drop event editor.</value>
     <comment>Drop Event navigation card description</comment>
   </data>
   
   <data name="Settings" xml:space="preserve">
-    <value>Paramètres</value>
+    <value>Settings</value>
     <comment>Settings navigation card title</comment>
   </data>
   <data name="SettingsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des paramètres.</value>
+    <value>Navigate to the settings page.</value>
     <comment>Settings navigation card description</comment>
   </data>
   
   <!-- Menu Items -->
   <data name="Dashboard" xml:space="preserve">
-    <value>Tableau de bord</value>
+    <value>Dashboard</value>
     <comment>Dashboard menu item</comment>
   </data>
   <data name="ChangeLog" xml:space="preserve">
-    <value>Journal des modifications</value>
+    <value>Change Log</value>
     <comment>Change Log menu item</comment>
   </data>
   
   <!-- Giftbox Page Translations -->
   <data name="Search" xml:space="preserve">
-    <value>Rechercher...</value>
+    <value>Search...</value>
     <comment>Search placeholder text</comment>
   </data>
   <data name="ItemsIn" xml:space="preserve">
-    <value>Objets dans:</value>
+    <value>Items in:</value>
     <comment>Items in text</comment>
   </data>
   <data name="Undo" xml:space="preserve">
-    <value>Annuler</value>
+    <value>Undo</value>
     <comment>Undo button tooltip</comment>
   </data>
   <data name="Redo" xml:space="preserve">
-    <value>Rétablir</value>
+    <value>Redo</value>
     <comment>Redo button tooltip</comment>
   </data>
   <data name="Save" xml:space="preserve">
-    <value>Enregistrer</value>
+    <value>Save</value>
     <comment>Save button text</comment>
   </data>
   <data name="Expert" xml:space="preserve">
@@ -384,23 +384,23 @@
     <comment>Expert button text</comment>
   </data>
   <data name="AddItem" xml:space="preserve">
-    <value>Ajouter un objet</value>
+    <value>Add Item</value>
     <comment>Add Item button text</comment>
   </data>
   <data name="ItemsInBox" xml:space="preserve">
-    <value>Objets dans la boîte:</value>
+    <value>Items in box:</value>
     <comment>Items in box text</comment>
   </data>
   <data name="TotalProbability" xml:space="preserve">
-    <value>Probabilité totale:</value>
+    <value>Total probability:</value>
     <comment>Total probability text</comment>
   </data>
   <data name="Item" xml:space="preserve">
-    <value>Objet</value>
+    <value>Item</value>
     <comment>Item column header</comment>
   </data>
   <data name="Quantity" xml:space="preserve">
-    <value>Quantité</value>
+    <value>Quantity</value>
     <comment>Quantity column header</comment>
   </data>
   <data name="Percentage" xml:space="preserve">
@@ -412,11 +412,11 @@
     <comment>Actions column header</comment>
   </data>
   <data name="Edit" xml:space="preserve">
-    <value>Modifier</value>
+    <value>Edit</value>
     <comment>Edit button tooltip</comment>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Supprimer</value>
+    <value>Delete</value>
     <comment>Delete button tooltip</comment>
   </data>
 </root>
