--- a/eTools Ultimate/Resources/Translations.fr-FR.resx
+++ b/eTools Ultimate/Resources/Translations.fr-FR.resx
@@ -117,13 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  
-  <!-- Dashboard Page Translations -->
   <data name="Welcome" xml:space="preserve">
     <value>Bienvenue</value>
     <comment>Welcome text on dashboard</comment>
   </data>
-  <data name="CreatedBy" xml:space="preserve">
+  <data name="Created by eTools Ultimate" xml:space="preserve">
     <value>Créé par eTools Ultimate</value>
     <comment>Created by text on dashboard</comment>
   </data>
@@ -131,142 +129,114 @@
     <value>Notes de patch</value>
     <comment>Patchlogs button text</comment>
   </data>
-  <data name="ViewOnGitHub" xml:space="preserve">
+  <data name="View on GitHub" xml:space="preserve">
     <value>Voir sur GitHub</value>
     <comment>GitHub button tooltip</comment>
   </data>
-  <data name="JoinDiscordServer" xml:space="preserve">
+  <data name="Join our Discord server" xml:space="preserve">
     <value>Rejoindre notre serveur Discord</value>
     <comment>Discord button tooltip</comment>
   </data>
-  
-  <!-- Navigation Cards -->
   <data name="Items" xml:space="preserve">
     <value>Objets</value>
     <comment>Items navigation card title</comment>
   </data>
-  <data name="ItemsDescription" xml:space="preserve">
+  <data name="Navigate to the items page." xml:space="preserve">
     <value>Naviguer vers la page des objets.</value>
     <comment>Items navigation card description</comment>
   </data>
-  
   <data name="Movers" xml:space="preserve">
     <value>Mobiles</value>
     <comment>Movers navigation card title</comment>
   </data>
-  <data name="MoversDescription" xml:space="preserve">
+  <data name="Navigate to the movers page." xml:space="preserve">
     <value>Naviguer vers la page des mobiles.</value>
     <comment>Movers navigation card description</comment>
   </data>
-  
   <data name="Skills" xml:space="preserve">
     <value>Compétences</value>
     <comment>Skills navigation card title</comment>
   </data>
-  <data name="SkillsDescription" xml:space="preserve">
+  <data name="Navigate to the skills page." xml:space="preserve">
     <value>Naviguer vers la page des compétences.</value>
     <comment>Skills navigation card description</comment>
   </data>
-  
   <data name="Quests" xml:space="preserve">
     <value>Quêtes</value>
     <comment>Quests navigation card title</comment>
   </data>
-  <data name="QuestsDescription" xml:space="preserve">
+  <data name="Navigate to the quests page." xml:space="preserve">
     <value>Naviguer vers la page des quêtes.</value>
     <comment>Quests navigation card description</comment>
   </data>
-  
   <data name="NPCs" xml:space="preserve">
     <value>PNJ</value>
     <comment>NPCs navigation card title</comment>
   </data>
-  <data name="NPCsDescription" xml:space="preserve">
+  <data name="Navigate to the NPCs page." xml:space="preserve">
     <value>Naviguer vers la page des PNJ.</value>
     <comment>NPCs navigation card description</comment>
   </data>
-  
   <data name="Events" xml:space="preserve">
     <value>Événements</value>
     <comment>Events navigation card title</comment>
   </data>
-  <data name="EventsDescription" xml:space="preserve">
+  <data name="Navigate to the events page." xml:space="preserve">
     <value>Naviguer vers la page des événements.</value>
     <comment>Events navigation card description</comment>
   </data>
-  
   <data name="Giftboxes" xml:space="preserve">
     <value>Boîtes-cadeaux</value>
     <comment>Giftboxes navigation card title</comment>
   </data>
-  <data name="GiftboxesDescription" xml:space="preserve">
+  <data name="Navigate to the giftboxes page." xml:space="preserve">
     <value>Naviguer vers la page des boîtes-cadeaux.</value>
     <comment>Giftboxes navigation card description</comment>
   </data>
-  
   <data name="Collectors" xml:space="preserve">
     <value>Collectionneurs</value>
     <comment>Collectors navigation card title</comment>
   </data>
-  <data name="CollectorsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des collectionneurs.</value>
-    <comment>Collectors navigation card description</comment>
-  </data>
-  
   <data name="Accessories" xml:space="preserve">
     <value>Accessoires</value>
     <comment>Accessories navigation card title</comment>
   </data>
-  <data name="AccessoriesDescription" xml:space="preserve">
+  <data name="Navigate to the accessories page." xml:space="preserve">
     <value>Naviguer vers la page des accessoires.</value>
     <comment>Accessories navigation card description</comment>
   </data>
-  
   <data name="Exchangers" xml:space="preserve">
     <value>Échangeurs</value>
     <comment>Exchangers navigation card title</comment>
   </data>
-  <data name="ExchangersDescription" xml:space="preserve">
+  <data name="Navigate to the exchanger page." xml:space="preserve">
     <value>Naviguer vers la page des échangeurs.</value>
     <comment>Exchangers navigation card description</comment>
   </data>
-  
-  <data name="HonorList" xml:space="preserve">
+  <data name="Honor List" xml:space="preserve">
     <value>Liste d'honneur</value>
     <comment>Honor List navigation card title</comment>
   </data>
-  <data name="HonorListDescription" xml:space="preserve">
+  <data name="Navigate to the honor list page." xml:space="preserve">
     <value>Naviguer vers la page de la liste d'honneur.</value>
     <comment>Honor List navigation card description</comment>
   </data>
-  
   <data name="Couple" xml:space="preserve">
     <value>Couple</value>
     <comment>Couple navigation card title</comment>
   </data>
-  <data name="CoupleDescription" xml:space="preserve">
+  <data name="Navigate to the couple page." xml:space="preserve">
     <value>Naviguer vers la page des couples.</value>
     <comment>Couple navigation card description</comment>
   </data>
-  
   <data name="Motions" xml:space="preserve">
     <value>Mouvements</value>
     <comment>Motions navigation card title</comment>
   </data>
-  <data name="MotionsDescription" xml:space="preserve">
-    <value>Naviguer vers la page des mouvements.</value>
-    <comment>Motions navigation card description</comment>
-  </data>
-  
-  <data name="TextClient" xml:space="preserve">
+  <data name="Text Client" xml:space="preserve">
     <value>Client texte</value>
     <comment>Text Client navigation card title</comment>
   </data>
-  <data name="TextClientDescription" xml:space="preserve">
-    <value>Naviguer vers le client texte.</value>
-    <comment>Text Client navigation card description</comment>
-  </data>
-  
   <data name="World" xml:space="preserve">
     <value>Monde</value>
     <comment>World navigation card title</comment>
@@ -275,95 +245,63 @@
     <value>Ouvrir l'éditeur de monde.</value>
     <comment>World navigation card description</comment>
   </data>
-  
   <data name="Tickets" xml:space="preserve">
     <value>Tickets</value>
     <comment>Tickets navigation card title</comment>
   </data>
-  <data name="TicketsDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de tickets.</value>
-    <comment>Tickets navigation card description</comment>
-  </data>
-  
   <data name="Object" xml:space="preserve">
     <value>Objet</value>
     <comment>Object navigation card title</comment>
   </data>
-  <data name="ObjectDescription" xml:space="preserve">
+  <data name="Navigate to the object editor." xml:space="preserve">
     <value>Ouvrir l'éditeur d'objets.</value>
     <comment>Object navigation card description</comment>
   </data>
-  
   <data name="Terrain" xml:space="preserve">
     <value>Terrain</value>
     <comment>Terrain navigation card title</comment>
   </data>
-  <data name="TerrainDescription" xml:space="preserve">
+  <data name="Navigate to the terrain editor." xml:space="preserve">
     <value>Ouvrir l'éditeur de terrain.</value>
     <comment>Terrain navigation card description</comment>
   </data>
-  
   <data name="Job" xml:space="preserve">
     <value>Métier</value>
     <comment>Job navigation card title</comment>
   </data>
-  <data name="JobDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de métiers.</value>
-    <comment>Job navigation card description</comment>
-  </data>
-  
   <data name="Packitem" xml:space="preserve">
     <value>Objet de pack</value>
     <comment>Packitem navigation card title</comment>
   </data>
-  <data name="PackitemDescription" xml:space="preserve">
+  <data name="Navigate to the packitem editor." xml:space="preserve">
     <value>Ouvrir l'éditeur d'objets de pack.</value>
     <comment>Packitem navigation card description</comment>
   </data>
-  
   <data name="Lord" xml:space="preserve">
     <value>Seigneur</value>
     <comment>Lord navigation card title</comment>
   </data>
-  <data name="LordDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur de seigneurs.</value>
-    <comment>Lord navigation card description</comment>
-  </data>
-  
-  <data name="DropEvent" xml:space="preserve">
+  <data name="Drop Event" xml:space="preserve">
     <value>Événement de drop</value>
     <comment>Drop Event navigation card title</comment>
   </data>
-  <data name="DropEventDescription" xml:space="preserve">
-    <value>Ouvrir l'éditeur d'événements de drop.</value>
-    <comment>Drop Event navigation card description</comment>
-  </data>
-  
   <data name="Settings" xml:space="preserve">
     <value>Paramètres</value>
     <comment>Settings navigation card title</comment>
   </data>
-  <data name="SettingsDescription" xml:space="preserve">
+  <data name="Navigate to the settings page." xml:space="preserve">
     <value>Naviguer vers la page des paramètres.</value>
     <comment>Settings navigation card description</comment>
   </data>
-  
-  <!-- Menu Items -->
   <data name="Dashboard" xml:space="preserve">
     <value>Tableau de bord</value>
     <comment>Dashboard menu item</comment>
   </data>
-  <data name="ChangeLog" xml:space="preserve">
-    <value>Journal des modifications</value>
-    <comment>Change Log menu item</comment>
-  </data>
-  
-  <!-- Giftbox Page Translations -->
   <data name="Search" xml:space="preserve">
     <value>Rechercher...</value>
     <comment>Search placeholder text</comment>
   </data>
-  <data name="ItemsIn" xml:space="preserve">
+  <data name="Items in:" xml:space="preserve">
     <value>Objets dans:</value>
     <comment>Items in text</comment>
   </data>
@@ -383,15 +321,11 @@
     <value>Expert</value>
     <comment>Expert button text</comment>
   </data>
-  <data name="AddItem" xml:space="preserve">
-    <value>Ajouter un objet</value>
-    <comment>Add Item button text</comment>
-  </data>
-  <data name="ItemsInBox" xml:space="preserve">
+  <data name="Items in box:" xml:space="preserve">
     <value>Objets dans la boîte:</value>
     <comment>Items in box text</comment>
   </data>
-  <data name="TotalProbability" xml:space="preserve">
+  <data name="Total probability:" xml:space="preserve">
     <value>Probabilité totale:</value>
     <comment>Total probability text</comment>
   </data>
@@ -403,7 +337,7 @@
     <value>Quantité</value>
     <comment>Quantity column header</comment>
   </data>
-  <data name="Percentage" xml:space="preserve">
+  <data name="%" xml:space="preserve">
     <value>%</value>
     <comment>Percentage column header</comment>
   </data>
@@ -418,5 +352,41 @@
   <data name="Delete" xml:space="preserve">
     <value>Supprimer</value>
     <comment>Delete button tooltip</comment>
+  </data>
+  <data name="Changelog" xml:space="preserve">
+    <value>Journal des modifications</value>
+    <comment>Change Log menu item</comment>
+  </data>
+  <data name="Add item" xml:space="preserve">
+    <value>Ajouter un objet</value>
+    <comment>Add Item button text</comment>
+  </data>
+  <data name="Navigate to the collectors page." xml:space="preserve">
+    <value>Naviguer vers la page des collectionneurs.</value>
+    <comment>Collectors navigation card description</comment>
+  </data>
+  <data name="Navigate to the drop event editor." xml:space="preserve">
+    <value>Ouvrir l'éditeur d'événements de drop.</value>
+    <comment>Drop Event navigation card description</comment>
+  </data>
+  <data name="Navigate to the job editor." xml:space="preserve">
+    <value>Ouvrir l'éditeur de métiers.</value>
+    <comment>Job navigation card description</comment>
+  </data>
+  <data name="Navigate to the motions page." xml:space="preserve">
+    <value>Naviguer vers la page des mouvements.</value>
+    <comment>Motions navigation card description</comment>
+  </data>
+  <data name="Navigate to the lord editor." xml:space="preserve">
+    <value>Ouvrir l'éditeur de seigneurs.</value>
+    <comment>Lord navigation card description</comment>
+  </data>
+  <data name="Navigate to the ticket editor." xml:space="preserve">
+    <value>Ouvrir l'éditeur de tickets.</value>
+    <comment>Tickets navigation card description</comment>
+  </data>
+  <data name="Navigate to the text client." xml:space="preserve">
+    <value>Naviguer vers le client texte.</value>
+    <comment>Text Client navigation card description</comment>
   </data>
 </root>
